Fixed error message and removed deprecated warning in JDK 11